Fix overflow

--- a/scss/schedule.scss
+++ b/scss/schedule.scss
@@ -501,18 +501,15 @@ main{
     }
 }
 
-.form__form-parts{
-    overflow: auto;
-}
-
 .second{
-    padding: 5vw;
-    width: 90%;
+    padding: 5vw 10vw;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-flow: column;
     gap: 1vw;
     max-height: 800px;
+    overflow: auto;
 
     input{
         width: 100%;
@@ -524,7 +521,6 @@ main{
         font-weight: 500;
         border-radius: 30px;
         margin-bottom: 5vw;
-
         border: unset;
         border-radius: 0;
         border-bottom: 2px solid rgb(186, 182, 182);
